--- a/materials/analysis.tex
+++ b/materials/analysis.tex
@@ -113,6 +113,17 @@ This profound theorem reveals that not all infinities are the same size. Despite
 \section{Problems for Practice}
 
 \begin{enumerate}
+
+    \item Prove the following statements are true in every ordered field.
+
+    \begin{enumerate}
+        \item If $x > 0$ then $-x < 0$, and vice versa.
+        \item If $x > 0$ and $y < z$ then $xy < xz$.
+        \item If $x < 0$ and $y < z$ then $xy > xz$.
+        \item If $x \neq 0$ then $x^2 > 0$. In particular, $1 > 0$.
+        \item If $0 < x < y$ then $0 < 1/y < 1/x$.
+    \end{enumerate}
+
     \item Let $S\subset\mathbb{R}$ and $a\in\mathbb{R}$. Prove that
     \begin{enumerate}
         \item $\sup (a+S)=a+\sup S$
