--- a/materials/analysis.tex
+++ b/materials/analysis.tex
@@ -130,6 +130,7 @@ This profound theorem reveals that not all infinities are the same size. Despite
         \item If $a>0$ then $\sup (aS)=a\sup S$
         \item If $a>0$ then $\sup (aS)=a\inf S$
     \end{enumerate}
+    \item Prove that supremum property implies infimum property.
     \item Use Archimedean Property to prove the following
     \begin{enumerate}
         \item If $S := \{1/n : n \in \mathbb{N}\}$, then $\inf S = 0$.
